--- a/src/main/resources/templates/requirements.html
+++ b/src/main/resources/templates/requirements.html
@@ -10,9 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <h1>WikiGroup</h1>
-        </div>
+        <div class="logo"><i class="fas fa-book-open"></i> WikiGroup</div>
         <nav>
             <div class="menu-toggle">
                 <i class="fas fa-bars"></i>
